k8s/cartesian-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: cartesian
  name: cartesian
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cartesian
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/cartesian_public: "true"
        io.kompose.service: cartesian
    spec:
      containers:
        - env:
            - name: DATABASE_DSN
              value: root:root@tcp(mysql:3306)/cartesian
            - name: DATABASE_TYPE
              value: mysql
            - name: DATA_PATH
              value: data/points.json
            - name: GIN_MODE
              value: release
            - name: PORT
              value: "8080"
          image: cartesian
          name: cartesian
          ports:
            - containerPort: 8080
            - containerPort: 2112
          resources: {}
      restartPolicy: Always
status: {}
