k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/cartesian_public: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - image: grafana/grafana:6.7.6
          name: grafana
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /etc/grafana/provisioning
              name: grafana-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /Users/leo/Development/cartesian/resources/grafana
          name: grafana-hostpath0
status: {}
