k8s/cartesian-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: cartesian
  name: cartesian
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "2112"
      port: 2112
      targetPort: 2112
  selector:
    io.kompose.service: cartesian
status:
  loadBalancer: {}
