k8s/cartesian_public-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartesian_public
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cartesian_public: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cartesian_public: "true"
